{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 31,
  "lineage": "0cb524cb-9cfe-3c77-2e27-48d793196359",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:internet-gateway/igw-03a08662e94aad372",
            "id": "igw-03a08662e94aad372",
            "owner_id": "730335569978",
            "tags": {
              "Name": "GovTech-IGW"
            },
            "tags_all": {
              "Name": "GovTech-IGW"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:network-acl/acl-0aaba9222c38e1135",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aaba9222c38e1135",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.3.0/24",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "owner_id": "730335569978",
            "subnet_ids": [
              "subnet-02bff90a920626547",
              "subnet-08323d204852a956d",
              "subnet-0d8e57696567243dd"
            ],
            "tags": {
              "Name": "Public-Subnet-NACL"
            },
            "tags_all": {
              "Name": "Public-Subnet-NACL"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:route-table/rtb-03d71006e493be60e",
            "id": "rtb-03d71006e493be60e",
            "owner_id": "730335569978",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a08662e94aad372",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953a01fbd6a14ea3",
            "route_table_id": "rtb-03d71006e493be60e",
            "subnet_id": "subnet-02bff90a920626547"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.govtech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c2166445a1b2de6",
            "route_table_id": "rtb-03d71006e493be60e",
            "subnet_id": "subnet-08323d204852a956d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.govtech_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0401a8c6019a1ef6d",
            "route_table_id": "rtb-03d71006e493be60e",
            "subnet_id": "subnet-0d8e57696567243dd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:security-group/sg-0438ff6fab1ed919d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0438ff6fab1ed919d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240829134520342600000003",
            "name_prefix": "terraform-",
            "owner_id": "730335569978",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:security-group/sg-0e1ff0030cf35f0a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1ff0030cf35f0a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.6.0/24",
                  "10.0.7.0/24",
                  "10.0.8.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240829134520350100000004",
            "name_prefix": "terraform-",
            "owner_id": "730335569978",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-03d173ad5601683f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d173ad5601683f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-1"
            },
            "tags_all": {
              "Name": "private-app-subnet-1"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-0e3b10c4110172250",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3b10c4110172250",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-2"
            },
            "tags_all": {
              "Name": "private-app-subnet-2"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-0d6187b583a232b3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6187b583a232b3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-3"
            },
            "tags_all": {
              "Name": "private-app-subnet-3"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-093172531e516a71a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093172531e516a71a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-DB-Subnet-0"
            },
            "tags_all": {
              "Name": "Private-DB-Subnet-0"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-08d9f5f076ee4f182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d9f5f076ee4f182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-DB-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-DB-Subnet-1"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-06bb910a057a337d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bb910a057a337d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-DB-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-DB-Subnet-2"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-02bff90a920626547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bff90a920626547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-0"
            },
            "tags_all": {
              "Name": "Public-Subnet-0"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-08323d204852a956d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08323d204852a956d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:subnet/subnet-0d8e57696567243dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e57696567243dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335569978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-04b51cd3745c62f0b"
          },
          "dependencies": [
            "aws_vpc.govtech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "govtech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335569978:vpc/vpc-04b51cd3745c62f0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09654110845a1c056",
            "default_route_table_id": "rtb-031f31cde17a1696c",
            "default_security_group_id": "sg-082b9ff046e4c4033",
            "dhcp_options_id": "dopt-0d9609c1eb1848f74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b51cd3745c62f0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031f31cde17a1696c",
            "owner_id": "730335569978",
            "tags": {
              "Name": "GovTech -VPC"
            },
            "tags_all": {
              "Name": "GovTech -VPC"
            }
          }
        }
      ]
    }
  ]
}